# tao-mining-intelligence

./: .gitignore  FIX-PLAN-IMPORTS.md  OPERATIONS.md  README.md  cdk.json  context.md  pyproject.toml  requirements.txt
.kiro/steering/: coding-standards.md  handoff.md
cdk/: app.py
cdk/stacks/: pipeline_stack.py
docs/architecture/: 01-system-overview.md  02-components.md  03-data-architecture.md  04-metrics-engine.md  05-quality-testing.md  06-assessment.md  07-roadmap.md  README.md
kb/: architecture-decision-18-independent-refresh.md  architecture-decisions.md  backlog-deep-collector.md  backlog.md  bittensor-mining-research.md  bug-staking-apy-overstated.md  chain-data-inventory.md  code-as-source-of-truth-experiments.md  commit-documentation-strategy.md  conformance-build-plan.md  conformance-concept-index.md  conformance-findings-schema.md  conformance-proof2-commit-history.md  design-principle-agent-native-conformance.md  epic-metrics-validation.md  infrastructure-assessment.md  metrics-math-audit-2026-06-01.md  metrics-reference.md  pocs-and-architecture.md  post-first-run-improvements.md  product-vision-roadmap.md  runbook-pipeline-pause-resume.md  runbook-validation-deploy.md  session-history.md  stage2-research-design.md  task-fix-metrics-data-bugs.md
kb/archive/: agent-plan-execution-research.md  backlog-validation-strategy-review.md  code-as-source-of-truth-experiments.md  (+2 more)
lambda/: .dockerignore  Dockerfile  requirements.txt
scripts/: check_drift.py  compute_realized_returns.py  deploy.sh  generate_metrics_reference.py  morning_check.sh  strategy.py  test_e2e_local.py  validate_against_providers.py  validate_all_metrics.py  validate_dynamodb.py  validate_fields.py  validate_formulas.py  validate_sdk.py  validate_sqs_sns.py  validator_leaderboard.py
tests/: conftest.py
(+89 files in other folders)
