[project]
name = "tao-mining-intelligence-pipeline"
version = "0.1.0"
description = "Serverless data collection and processing system for Bittensor subnet mining intelligence"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "bittensor>=10.0.0",
    "boto3>=1.34.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[all]>=5.0.0",
]
cdk = [
    "aws-cdk-lib>=2.130.0",
    "constructs>=10.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["lambda/src"]
